@@ -1,3 +1,0 @@
-README.md
-DESIGN.md
-INSTALL.md
