@@ -1,0 +1,1 @@
+usr/share/doc/stenographer-common usr/share/doc/stenographer-client
